--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     compile 'org.jetbrains.anko:anko-common:0.9'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.parse:parseui-login-android:0.0.2'
+    compile 'com.parse:parseui-widget-android:0.0.2'
 }
