--- a/ProxiJob/app/src/main/AndroidManifest.xml
+++ b/ProxiJob/app/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-        android:name=".App"
+        android:name=".Utils.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <meta-data
             android:name="com.parse.SERVER_URL"
             android:value="@string/parse_server_url" />
@@ -40,11 +40,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Subscribe" />
-        <activity android:name=".SubscribeEntreprise" />
-        <activity android:name=".SubscribeClient" />
-        <activity android:name=".Login" />
-        <activity android:name=".MapInformationDetails"></activity>
+        <activity android:name=".Login.Subscribe" />
+        <activity android:name=".Company.SubscribeEntreprise" />
+        <activity android:name=".Client.SubscribeClient" />
+        <activity android:name=".Login.Login" />
+        <activity android:name=".Client.MapInformationDetails"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
