--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.parse:parseui-login-android:0.0.2'
     compile 'com.parse:parseui-widget-android:0.0.2'
+    compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 
 }
