Profil client, vue 3 boutons + informations client

--- a/ProxiJob/app/src/main/AndroidManifest.xml
+++ b/ProxiJob/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".Client.SubscribeClient" />
         <activity android:name=".Login.Login" />
         <activity android:name=".Client.MapInformationDetails"></activity>
+        <activity android:name=".Client.InformationsActivity"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
