--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
     compile 'com.github.deano2390:MaterialShowcaseView:1.2.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
 }
