--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 26
     defaultConfig {
+        multiDexEnabled true
         applicationId "proxyjob.proxyjob"
         minSdkVersion 15
         targetSdkVersion 26
@@ -25,24 +26,29 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
-    compile 'com.google.android.gms:play-services-location:11.8.0'
-    compile 'com.google.android.gms:play-services-places:11.8.0'
-    compile 'com.google.android.gms:play-services:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:12.0.1'
+    implementation 'com.google.android.gms:play-services-location:12.0.1'
+    implementation 'com.google.android.gms:play-services-places:12.0.1'
+    implementation 'com.google.android.gms:play-services:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.parse:parse-android:1.16.3'
-    compile 'org.jetbrains.anko:anko-common:0.9'
-    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.parse:parseui-login-android:0.0.2'
-    compile 'com.parse:parseui-widget-android:0.0.2'
-    compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
-    compile 'com.github.deano2390:MaterialShowcaseView:1.2.0'
-    compile 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.parse:parse-android:1.16.3'
+    implementation 'org.jetbrains.anko:anko-common:0.9'
+    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.parse:parseui-login-android:0.0.2'
+    implementation 'com.parse:parseui-widget-android:0.0.2'
+    implementation 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+    //noinspection GradleDynamicVersion
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
+    implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
 }
