--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.github.recruit-lifestyle:WaveSwipeRefreshLayout:1.6'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.codemybrainsout.placesearchdialog:placesearch:1.0.1'
 }
