--- a/ProxiJob/app/build.gradle
+++ b/ProxiJob/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.codemybrainsout.placesearchdialog:placesearch:1.0.1'
+    //implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
